# vistel

./: .replit  pnpm-lock.yaml  pyproject.toml  replit.md
RetinaGPT/: README.md
RetinaGPT/backend/: Dockerfile  README.md  SETUP_AND_RUN.md  demo_api.py
RetinaGPT/backend/ai_copilot/: __init__.py  copilot.py
RetinaGPT/backend/api/: __init__.py  main.py
RetinaGPT/backend/data_engine/: data_engine.py
RetinaGPT/backend/database/: retina_cases.db
RetinaGPT/backend/db/: __init__.py  cases_db.py
RetinaGPT/backend/evaluation/: clinical_eval.py
RetinaGPT/backend/inference/: pipeline.py
RetinaGPT/backend/interpretability/: grad_cam.py
RetinaGPT/frontend/: next.config.js  package.json  tsconfig.json
RetinaGPT/frontend/app/: globals.css  (+1 more)
artifacts/api-server/: package.json
artifacts/eye-diagnosis/: index.html  package.json  requirements.yaml
attached_assets/: Pasted--ai-soltion-python-detection-o-retina-desses-dibi-17733_1773317764591.txt
backend/: docker-compose.yml  requirements.txt  setup.py
backend/configs/: model_config.yaml  training_config.yaml
backend/data/: __init__.py
backend/data_engine/: __init__.py
backend/evaluation/: __init__.py  metrics.py
backend/inference/: __init__.py
backend/interpretability/: __init__.py
backend/models/: __init__.py
backend/reporting/: pdf_report.py
backend/retrieval/: vector_search.py
backend/scripts/: train.py  train_foundation.py
backend/training/: distributed.py  experiment_tracker.py  model_registry.py  trainer.py
backend/utils/: __init__.py  preprocessing.py
lib/api-spec/: openapi.yaml
(+58 files in other folders)
