[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "einops>=0.8.2",
    "fastapi>=0.135.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.10",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.42.0",
]
